# apinator

./: .bumpversion.cfg  README.md  pyproject.toml  setup.cfg
apinator/: __init__.py  api.py  common.py  endpoint.py
docs/: conf.py  getting_started.md  index.md  overview.md  requirements.txt
docs/api/: apinator.api.md  apinator.common.md  apinator.endpoint.md  apinator.md
tests/: test_basic.py  test_pathstr.py  test_request.py
