[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apinator"
readme = "README.md"
authors = [{name = "Rearc Data", email = "data@rearc.io"}]
dynamic = ["version", "description"]
dependencies = [
    "typing_extensions>=4",
    "pydantic>2",
    "requests",
]
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "responses",
]
dev = [
    "sphinx",
    "sphinx-material",
    "sphinxcontrib-mermaid",
    "myst-parser",
]

[project.urls]
Home = "https://github.com/rearc-data/apinator"
