[metadata]
version = 0.1.0
name = apinator
description = Tooling to build consistent, self-validating bindings to external API's
author = Rearc Data
author_email = data@rearc.io

long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rearc-data/apinator

project_urls =
    Bug Tracker = https://github.com/rearc-data/apinator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
where = .

;[tool:pytest]
;addopts = --cov=apinator --cov-report term-missing --cov-report html
